--- a/src/app/pages/group/information/group-information.page.html
+++ b/src/app/pages/group/information/group-information.page.html
@@ -119,7 +119,7 @@
     <div class="page-right-menu">
     </div>
 
-    <app-assign-lesson-popup [teachers]="teachers" [cabinets]="cabinets" [staffMembers]="staffMembers"></app-assign-lesson-popup>
+    <app-assign-lesson-popup [cabinets]="cabinets" [staffMembers]="staffMembers"></app-assign-lesson-popup>
   </div>
 
   <div class="footer">
