--- a/src/app/pages/student/information/student-information.page.html
+++ b/src/app/pages/student/information/student-information.page.html
@@ -112,7 +112,7 @@
     <div class="page-right-menu">
     </div>
 
-    <app-student-assign-group-popup [groups]="getMatchingGroups()" [teachers]="allTeachers" [students]="allStudents"></app-student-assign-group-popup>
+    <app-student-assign-group-popup [groups]="getMatchingGroups()" [staffMembers]="allStaffMembers" [students]="allStudents"></app-student-assign-group-popup>
   </div>
 
   <div class="footer">
