--- a/src/app/pages/student/payment/payment-row/student-payment.row.html
+++ b/src/app/pages/student/payment/payment-row/student-payment.row.html
@@ -5,7 +5,7 @@
   {{payment.amount}}₽
 </div>
 <div class="payments-teachers-column">
-  {{getTeacher().name}}
+  {{getStaffMember().person.name}}
 </div>
 <div class="payments-teachers-column">
   <div class="student-status">
