--- a/src/app/pages/student/payment/student-payment.page.html
+++ b/src/app/pages/student/payment/student-payment.page.html
@@ -45,7 +45,7 @@
              *ngFor="let payment of payments"
              class="list-row"
              [payment]="payment"
-             [teachers]="teachers"
+             [staffMembers]="staffMembers"
              (paymentDeleted)="onPaymentDeleted($event)">
         </div>
 
