--- a/src/app/pages/staff-members/card/menu/staff-member-card-menu.component.html
+++ b/src/app/pages/staff-members/card/menu/staff-member-card-menu.component.html
@@ -1,15 +1,15 @@
 <div [class.page-left-menu-item-active]="currentTab === 'INFORMATION'"
      [class.page-left-menu-item-inactive]="currentTab !== 'INFORMATION'"
      (click)="navigateTo('information')">
+
   <i class="fa fa-info-circle" aria-hidden="true"></i>
   <span class="horizontal-item">Информация</span>
 </div>
 
-<div *ngIf="!!teacherId"
-     [class.page-left-menu-item-active]="currentTab === 'TIMETABLE'"
+<div [class.page-left-menu-item-active]="currentTab === 'TIMETABLE'"
      [class.page-left-menu-item-inactive]="currentTab !== 'TIMETABLE'"
      (click)="navigateTo('timetable')">
+
   <i class="fa fa-clock-o" aria-hidden="true"></i>
   <span class="horizontal-item">Расписание</span>
 </div>
-
