--- a/src/app/pages/cabinet/menu/cabinet-menu.component.html
+++ b/src/app/pages/cabinet/menu/cabinet-menu.component.html
@@ -1,14 +1,15 @@
-<div [class.page-left-menu-item-active]="currentTab === 'INFORMATION'"
-     [class.page-left-menu-item-inactive]="currentTab !== 'INFORMATION'"
-     (click)="navigateTo('information')">
-  <i class="fa fa-info-circle" aria-hidden="true"></i>
-  <span class="horizontal-item">Информация</span>
-</div>
+<ng-container *ngIf="!!cabinetId">
+  <div [class.page-left-menu-item-active]="currentTab === 'INFORMATION'"
+       [class.page-left-menu-item-inactive]="currentTab !== 'INFORMATION'"
+       (click)="navigationService.cabinets().id(this.cabinetId).information().go()">
+    <i class="fa fa-info-circle" aria-hidden="true"></i>
+    <span class="horizontal-item">Информация</span>
+  </div>
 
-<div *ngIf="!!cabinetId"
-     [class.page-left-menu-item-active]="currentTab === 'TIMETABLE'"
-     [class.page-left-menu-item-inactive]="currentTab !== 'TIMETABLE'"
-     (click)="navigateTo('timetable')">
-  <i class="fa fa-clock-o" aria-hidden="true"></i>
-  <span class="horizontal-item">Расписание</span>
-</div>
+  <div [class.page-left-menu-item-active]="currentTab === 'TIMETABLE'"
+       [class.page-left-menu-item-inactive]="currentTab !== 'TIMETABLE'"
+       (click)="navigationService.cabinets().id(this.cabinetId).timetable().go()">
+    <i class="fa fa-clock-o" aria-hidden="true"></i>
+    <span class="horizontal-item">Расписание</span>
+  </div>
+</ng-container>
