--- a/src/app/pages/groups-list/groups-list.page.html
+++ b/src/app/pages/groups-list/groups-list.page.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="groups-list-header-add-new">
-      <button class="btn btn-primary pull-right" (click)="openNewGroupPage()">
+      <button class="btn btn-primary pull-right" (click)="this.navigationService.groups().new()">
         Добавить
       </button>
     </div>
