--- a/src/app/pages/staff-members/card/menu/staff-member-card-menu.component.html
+++ b/src/app/pages/staff-members/card/menu/staff-member-card-menu.component.html
@@ -1,6 +1,6 @@
 <div [class.page-left-menu-item-active]="currentTab === 'INFORMATION'"
      [class.page-left-menu-item-inactive]="currentTab !== 'INFORMATION'"
-     (click)="navigateTo('information')">
+     (click)="navigationService.staffMembers().id(staffMemberLogin).information().go()">
 
   <i class="fa fa-info-circle" aria-hidden="true"></i>
   <span class="horizontal-item">Информация</span>
@@ -8,7 +8,7 @@
 
 <div [class.page-left-menu-item-active]="currentTab === 'TIMETABLE'"
      [class.page-left-menu-item-inactive]="currentTab !== 'TIMETABLE'"
-     (click)="navigateTo('timetable')">
+     (click)="navigationService.staffMembers().id(staffMemberLogin).timetable().go()">
 
   <i class="fa fa-clock-o" aria-hidden="true"></i>
   <span class="horizontal-item">Расписание</span>
