--- a/src/app/parts/header/header.component.html
+++ b/src/app/parts/header/header.component.html
@@ -4,7 +4,7 @@
   </div>
 
   <div class="header-body-section">
-    <div (click)="navigate('/students')"
+    <div (click)="navigationService.students().list().go()"
          [class.menu-element-active]="activeSection === 'STUDENTS'"
          [class.menu-element-inactive]="activeSection !== 'STUDENTS'">
 
@@ -13,7 +13,7 @@
       Студенты
     </div>
 
-    <div (click)="navigate('/groups')"
+    <div (click)="navigationService.groups().list().go()"
          [class.menu-element-active]="activeSection === 'GROUPS'"
          [class.menu-element-inactive]="activeSection !== 'GROUPS'">
 
@@ -22,7 +22,7 @@
       Группы
     </div>
 
-    <div (click)="navigate('/staff-members')"
+    <div (click)="navigationService.staffMembers().list().go()"
          [class.menu-element-active]="activeSection === 'STAFF_MEMBERS'"
          [class.menu-element-inactive]="activeSection !== 'STAFF_MEMBERS'">
 
@@ -31,7 +31,7 @@
       Сотрудники
     </div>
 
-    <div (click)="navigate('/cabinets')"
+    <div (click)="navigationService.cabinets().list().go()"
          [class.menu-element-active]="activeSection === 'CABINETS'"
          [class.menu-element-inactive]="activeSection !== 'CABINETS'">
 
