--- a/src/app/pages/student/menu/student-menu.component.html
+++ b/src/app/pages/student/menu/student-menu.component.html
@@ -1,29 +1,31 @@
 <ng-container *ngIf="!!studentId">
-  <div [class.page-left-menu-item-active]="currentTab === 'INFORMATION'"
-    [class.page-left-menu-item-inactive]="currentTab !== 'INFORMATION'"
+
+  <app-menu-item
+    [isActive]="currentTab === 'INFORMATION'"
+    [title]="'Информация'"
+    [icon]="'fa-info-circle'"
     (click)="navigationService.students().id(studentId).information().go()">
-    <i class="fa fa-info-circle menu-item-icon" aria-hidden="true"></i>
-    <span class="horizontal-item">Информация</span>
-  </div>
+  </app-menu-item>
 
-  <div [class.page-left-menu-item-active]="currentTab === 'STATUS'"
-    [class.page-left-menu-item-inactive]="currentTab !== 'STATUS'"
+  <app-menu-item
+    [isActive]="currentTab === 'STATUS'"
+    [title]="'Статус'"
+    [icon]="'fa-road'"
     (click)="navigationService.students().id(studentId).status().go()">
-    <i class="fa fa-road menu-item-icon" aria-hidden="true"></i>
-    <span class="horizontal-item">Статус</span>
-  </div>
+  </app-menu-item>
 
-  <div [class.page-left-menu-item-active]="currentTab === 'ATTENDANCE'"
-    [class.page-left-menu-item-inactive]="currentTab !== 'ATTENDANCE'"
+  <app-menu-item
+    [isActive]="currentTab === 'ATTENDANCE'"
+    [title]="'Посещаемость'"
+    [icon]="'fa-users'"
     (click)="navigationService.students().id(studentId).attendance().go()">
-    <i class="fa fa-users menu-item-icon" aria-hidden="true"></i>
-    <span class="horizontal-item">Посещаемость</span>
-  </div>
+  </app-menu-item>
 
-  <div [class.page-left-menu-item-active]="currentTab === 'PAYMENT'"
-    [class.page-left-menu-item-inactive]="currentTab !== 'PAYMENT'"
+  <app-menu-item
+    [isActive]="currentTab === 'PAYMENT'"
+    [title]="'Оплата'"
+    [icon]="'fa-money'"
     (click)="navigationService.students().id(studentId).payment().go()">
-    <i class="fa fa-money menu-item-icon" aria-hidden="true"></i>
-    <span class="horizontal-item">Оплата</span>
-  </div>
+  </app-menu-item>
+
 </ng-container>
