--- a/src/app/pages/cabinet/menu/cabinet-menu.component.html
+++ b/src/app/pages/cabinet/menu/cabinet-menu.component.html
@@ -1,15 +1,17 @@
 <ng-container *ngIf="!!cabinetId">
-  <div [class.page-left-menu-item-active]="currentTab === 'INFORMATION'"
-       [class.page-left-menu-item-inactive]="currentTab !== 'INFORMATION'"
-       (click)="navigationService.cabinets().id(this.cabinetId).information().go()">
-    <i class="fa fa-info-circle" aria-hidden="true"></i>
-    <span class="horizontal-item">Информация</span>
-  </div>
 
-  <div [class.page-left-menu-item-active]="currentTab === 'TIMETABLE'"
-       [class.page-left-menu-item-inactive]="currentTab !== 'TIMETABLE'"
-       (click)="navigationService.cabinets().id(this.cabinetId).timetable().go()">
-    <i class="fa fa-clock-o" aria-hidden="true"></i>
-    <span class="horizontal-item">Расписание</span>
-  </div>
+  <app-menu-item
+    [isActive]="currentTab === 'INFORMATION'"
+    [title]="'Информация'"
+    [icon]="'fa-info-circle'"
+    (click)="navigationService.cabinets().id(this.cabinetId).information().go()">
+  </app-menu-item>
+
+  <app-menu-item
+    [isActive]="currentTab === 'TIMETABLE'"
+    [title]="'Расписание'"
+    [icon]="'fa-clock-o'"
+    (click)="navigationService.cabinets().id(this.cabinetId).timetable().go()">
+  </app-menu-item>
+
 </ng-container>
