--- a/src/app/pages/group/menu/group-menu.component.html
+++ b/src/app/pages/group/menu/group-menu.component.html
@@ -1,22 +1,24 @@
 <ng-container *ngIf="!!groupId">
-  <div [class.page-left-menu-item-active]="currentTab === 'INFORMATION'"
-    [class.page-left-menu-item-inactive]="currentTab !== 'INFORMATION'"
+
+  <app-menu-item
+    [isActive]="currentTab === 'INFORMATION'"
+    [title]="'Информация'"
+    [icon]="'fa-info-circle'"
     (click)="navigationService.groups().id(this.groupId).information().go()">
-    <i class="fa fa-info-circle" aria-hidden="true"></i>
-    <span class="horizontal-item">Информация</span>
-  </div>
+  </app-menu-item>
 
-  <div [class.page-left-menu-item-active]="currentTab === 'STUDENTS'"
-    [class.page-left-menu-item-inactive]="currentTab !== 'STUDENTS'"
+  <app-menu-item
+    [isActive]="currentTab === 'STUDENTS'"
+    [title]="'Ученики'"
+    [icon]="'fa-users'"
     (click)="navigationService.groups().id(this.groupId).students().go()">
-    <i class="fa fa-users" aria-hidden="true"></i>
-    <span class="horizontal-item">Ученики</span>
-  </div>
+  </app-menu-item>
 
-  <div [class.page-left-menu-item-active]="currentTab === 'TIMETABLE'"
-    [class.page-left-menu-item-inactive]="currentTab !== 'TIMETABLE'"
+  <app-menu-item
+    [isActive]="currentTab === 'TIMETABLE'"
+    [title]="'Расписание'"
+    [icon]="'fa-clock-o'"
     (click)="navigationService.groups().id(this.groupId).timetable().go()">
-    <i class="fa fa-clock-o" aria-hidden="true"></i>
-    <span class="horizontal-item">Расписание</span>
-  </div>
+  </app-menu-item>
+
 </ng-container>
