--- a/src/app/pages/staff-members/card/information/staff-member-card-information.page.html
+++ b/src/app/pages/staff-members/card/information/staff-member-card-information.page.html
@@ -2,7 +2,7 @@
   <app-header></app-header>
 
   <div class="page-elements">
-    <div class="page-left-menu" app-staff-member-menu [staffMemberLogin]="staffMember.login" [currentTab]="'INFORMATION'"></div>
+    <div class="page-left-menu" app-staff-member-menu [isNew]="isNew" [staffMemberLogin]="staffMember.login" [currentTab]="'INFORMATION'"></div>
 
     <div class="page-content-with-footer">
       <ng-container *ngIf="!loadingInProgress">
