--- a/src/app/pages/staff-members/card/menu/staff-member-card-menu.component.html
+++ b/src/app/pages/staff-members/card/menu/staff-member-card-menu.component.html
@@ -1,15 +1,17 @@
-<div [class.page-left-menu-item-active]="currentTab === 'INFORMATION'"
-     [class.page-left-menu-item-inactive]="currentTab !== 'INFORMATION'"
-     (click)="navigationService.staffMembers().id(staffMemberLogin).information().go()">
+<ng-container *ngIf="!isNew">
 
-  <i class="fa fa-info-circle" aria-hidden="true"></i>
-  <span class="horizontal-item">Информация</span>
-</div>
+  <app-menu-item
+    [isActive]="currentTab === 'INFORMATION'"
+    [title]="'Информация'"
+    [icon]="'fa-info-circle'"
+    (click)="navigationService.staffMembers().id(staffMemberLogin).information().go()">
+  </app-menu-item>
 
-<div [class.page-left-menu-item-active]="currentTab === 'TIMETABLE'"
-     [class.page-left-menu-item-inactive]="currentTab !== 'TIMETABLE'"
-     (click)="navigationService.staffMembers().id(staffMemberLogin).timetable().go()">
+  <app-menu-item
+    [isActive]="currentTab === 'TIMETABLE'"
+    [title]="'Расписание'"
+    [icon]="'fa-clock-o'"
+    (click)="navigationService.staffMembers().id(staffMemberLogin).timetable().go()">
+  </app-menu-item>
 
-  <i class="fa fa-clock-o" aria-hidden="true"></i>
-  <span class="horizontal-item">Расписание</span>
-</div>
+</ng-container>
