--- a/src/app/controls/form-select-control-education-level/form-select.education-level.control.html
+++ b/src/app/controls/form-select-control-education-level/form-select.education-level.control.html
@@ -3,6 +3,6 @@
      [label]="'Уровень подготовки'"
      [valid]="!!educationLevel"
      [valueString]="educationLevel"
-     [items]="educationLevelDictionary.selectItems"
+     [items]="items"
      [hasEmpty]="true"
      (onChangeString)="onValueChanged($event)"></div>
