--- a/src/app/pages/group/information/group-information.page.html
+++ b/src/app/pages/group/information/group-information.page.html
@@ -75,10 +75,10 @@
 
           <div *ngFor="let lesson of lessons; let i = index;" class="app-clickable-row" (click)="setExistingModalLesson(lesson, i)" data-toggle="modal" data-target="#groupLessonModal">
             <div class="group-lesson-row-day-of-week">
-              {{getDayOfWeekTranslation(lesson.day)}}
+              {{translationService.dayOfWeek().translate(lesson.day)}}
             </div>
             <div class="group-lesson-row-time">
-              {{getTimeTranslation(lesson.startTime)}} - {{getTimeTranslation(lesson.finishTime)}}
+              {{translationService.time().translate(lesson.startTime)}} - {{translationService.time().translate(lesson.finishTime)}}
             </div>
             <div class="group-lesson-row-teacher">
               {{getTeacher(lesson.teacherLogin).name}}
