--- a/src/app/pages/group/information/group-information.page.html
+++ b/src/app/pages/group/information/group-information.page.html
@@ -81,7 +81,7 @@
               {{translationService.time().translate(lesson.startTime)}} - {{translationService.time().translate(lesson.finishTime)}}
             </div>
             <div class="group-lesson-row-teacher">
-              {{getTeacher(lesson.teacherLogin).name}}
+              TODO
             </div>
             <ng-container>
               <div class="group-lesson-row-status" *ngIf="!lesson.id">
