--- a/src/app/controls/form-select-control/form-select.control.html
+++ b/src/app/controls/form-select-control/form-select.control.html
@@ -5,6 +5,6 @@
 </label>
 <select id="status" class="app-select form-control" name="status" [(ngModel)]="value" (change)="onValueChange($event.target.value)" style="width: 100%">
   <option *ngFor="let item of getItems()" [value]="item.value">
-    {{item.name === '-' ? (item.value | translate) : item.name}}
+    {{item.name === '-' ? item.value : item.name}}
   </option>
 </select>
