--- a/src/styles.less
+++ b/src/styles.less
@@ -1,15 +1,8 @@
 @import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
 
-@import "styles/page.less";
-@import "styles/list.less";
-@import "styles/table.less";
-@import "styles/buttons.less";
-@import "styles/tag-input.less";
-@import "styles/controls.less";
-@import 'styles/student-status.less';
-@import 'styles/scroll.less';
-@import 'styles/modal.less';
-@import 'styles/app-clickable-row.less';
+@import "styles/index";
+
+
 
 .no-padding {
   padding: 0 !important;
