--- a/src/styles/controls.less
+++ b/src/styles/controls.less
@@ -1,7 +1,6 @@
-@import "fonts.less";
-@import "colors.less";
+@import "~styles/abstract/index";
 
-.app-header {
+.app-header { // todo: rename to .page_header
   color: @color-fill_text_basic;
 }
 
