--- a/src/app/controls/form-select-control/form-select.control.less
+++ b/src/app/controls/form-select-control/form-select.control.less
@@ -1,5 +1,4 @@
-@import "../../../styles/fonts.less";
-@import "../../../styles/colors.less";
+@import "~styles/index";
 
 .app-select {
   font-size: 14px;
