--- a/src/app/pages/groups/card/pages/information/group-card-information.page.html
+++ b/src/app/pages/groups/card/pages/information/group-card-information.page.html
@@ -93,7 +93,7 @@
         <br>
 
         <div style="display: flex; flex-direction: row; justify-content: space-between;">
-          <div class="app-card-page-title">Занятия:</div>
+          <div class="app-card-page-title">Занятия</div>
 
           <div class="app-card-page-link" (click)="toggleInactiveLessons()">
             <ng-container *ngIf="!showInactiveLessons">
