--- a/src/app/pages/groups/card/common/menu/group-menu.component.html
+++ b/src/app/pages/groups/card/common/menu/group-menu.component.html
@@ -9,7 +9,7 @@
 
   <app-menu-item
     [isActive]="currentTab === 'STUDENTS'"
-    [title]="'Ученики'"
+    [title]="'Студенты'"
     [icon]="'fa-users'"
     (click)="navigationService.groups().id(this.groupId).students().go()">
   </app-menu-item>
