--- a/src/app/pages/groups/card/pages/information/views/lesson-row/group-card-information-lesson-row.view.less
+++ b/src/app/pages/groups/card/pages/information/views/lesson-row/group-card-information-lesson-row.view.less
@@ -1,16 +1,22 @@
 @import "~styles/index";
 
-.group-lesson-row {
-  display: flex;
-  flex-direction: row;
+.app-group-card-information-group-lesson-row {
+  .app-card-page-row-with-actions;
+}
 
-  margin-bottom: @app-size-1;
+.app-group-card-information-group-lesson-row-info {
+  .app-card-page-row-with-actions-info;
 
-  background: @color-alt_basic_base;
+  width: 80%;
+}
+
+.app-group-card-information-group-lesson-row-actions {
+  .app-card-page-row-with-actions-actions;
+
+  width: 20%;
 }
 
 .group-lesson-row-column {
-  padding: @app-size-2;
 }
 
 .group-lesson-row-column-day-of-week {
