--- a/src/app/pages/groups/card/pages/information/group-card-information.page.html
+++ b/src/app/pages/groups/card/pages/information/group-card-information.page.html
@@ -105,27 +105,22 @@
           </div>
         </div>
 
-        <div *ngIf="lessons.length === 0">
-          <br>
-
-          Занятия не назначены
-
-          <br>
-          <br>
-        </div>
-
         <br>
+
+        <div class="app-card-page-text" *ngIf="lessons.length === 0">
+          Занятия не назначены
+        </div>
 
         <app-group-card-information-lesson-row
           *ngFor="let lesson of lessons"
           [groupLessonInfo]="lesson"
           [staffMembers]="staffMembers"
-          (click)="setExistingModalLesson(lesson)">
+          (editLesson)="editLesson($event)">
         </app-group-card-information-lesson-row>
 
         <br>
 
-        <button class="app-button-primary" (click)="setNewModalLesson()">
+        <button class="app-button-primary app-group-card-information-add-group" (click)="addLesson()">
           Добавить занятие
         </button>
 
@@ -138,11 +133,16 @@
   </div>
 
   <div class="app-card-page-footer">
-    <button [disabled]="loadingInProgress || loadingInProgress || !group.id" class="app-button-danger pull-right horizontal-item" (click)="delete()">
+    <button
+      [disabled]="loadingInProgress || loadingInProgress || !group.id"
+      class="app-button-danger app-card-page-footer-button"
+      (click)="delete()">
       Удалить
     </button>
 
-    <button [disabled]="loadingInProgress || loadingInProgress" class="app-button-primary pull-right" (click)="save()">
+    <button
+      [disabled]="loadingInProgress || loadingInProgress"
+      class="app-button-primary app-card-page-footer-button" (click)="save()">
       Сохранить
     </button>
   </div>
